# searchify

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Procfile  TODOs.org  bench.py  build.rs  grafana.json  node_1.toml  node_2.toml  node_3.toml  node_4.toml  requests.txt
proto/: gossip.proto  internal.proto
src/: .#action_executor.rb  action.rs  action_executor.rs  async_work_queue.rs  cached_persistent_cell.rs  cached_persistent_map.rs  clock.rs  cluster.rs  cluster_state.rs  config.rs  document.rs  event_emitter.rs  gossip.rs  id_generator.rs  index_coordinator.rs  index_meta_table.rs  index_tracker.rs  key_value_state_machine.rs  keys.rs  kv_index.rs  lib.rs  main.rs  mappings.rs  metrics.rs  network.rs  node.rs  node_router.rs  persistent_cell.rs  persistent_map.rs  query_api.rs  raft.rs  raft_group.rs  raft_router.rs  raft_storage.rs  replica_set.rs  rpc_client.rs  search.rs  search_state_machine.rs  search_storage.rs  shard.rs  (+4 more)
src/actions/: action_context.rs  bulk.rs  cluster_health.rs  common.rs  create_index.rs  delete_document.rs  delete_index.rs  get_document.rs  get_index.rs  index_document.rs  index_exists.rs  list_indices.rs  mod.rs  refresh.rs  search.rs
src/gossip/: mod.rs  node.rs  server.rs  state.rs
src/proto/: mod.rs
src/web/: metrics_middleware.rs  mod.rs
tests/: integration_test.rs
