[package]
name = "searchify"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]
edition = "2018"

[dependencies]
byteorder = "*"
bytes = "*"
clap = "*"
config = "*"
env_logger = "*"
grpcio = "*"
failure = "*"
futures = "0.1"
futures-cpupool = "*"
http = "*"
log = "*"
protobuf = "*"
prost = "*"
prost-derive = "*"
rand = "*"
raft = "0.4"
serde = "*"
serde_derive = "*"
serde_json = "*"
tantivy = "*"
tokio = "*"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-retry = "*"
tokio-signal = "*"
tokio-timer = "*"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-util = { git = "https://github.com/tower-rs/tower" }
tower-web = "*"
uuid = "*"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[build-dependencies]
protoc-grpcio = "*"
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }

[dev-dependencies]
tempfile = "*"
