[package]
name = "searchify"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
base64 = "*"
byteorder = "*"
bytes = "*"
clap = "*"
config = "*"
env_logger = "*"
grpcio = "*"
failure = "*"
futures = "0.1"
futures-cpupool = "*"
http = "*"
hybrid-clocks = "*"
log = "*"
protobuf = "*"
prost = "*"
prost-derive = "*"
rand = "*"
raft = "0.4"
serde = "*"
serde_derive = "*"
serde_json = "*"
tantivy = "*"
tokio = "*"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-dns-unofficial = "*"
tokio-retry = "*"
tokio-signal = "*"
tokio-timer = "*"
uuid = "*"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[build-dependencies]
protoc-grpcio = "*"

[dev-dependencies]
tempfile = "*"
