[package]
name = "searchify"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]
edition = "2018"

[dependencies]
actix-service = "*"
actix-web = "1.0"
base64 = "*"
byteorder = "*"
bytes = "*"
clap = "*"
config = "*"
env_logger = "*"
grpcio = "*"
failure = "*"
futures = "0.1"
futures-cpupool = "*"
http = "*"
hybrid-clocks = "*"
lazy_static = "*"
log = "*"
prometheus = "*"
protobuf = "*"
prost = "*"
prost-derive = "*"
rand = "*"
raft = { git = "https://github.com/pingcap/raft-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tantivy = "*"
tokio = "*"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-dns-unofficial = "*"
tokio-retry = "*"
tokio-signal = "*"
tokio-timer = "*"
tower-grpc = { version = "*", features = ["tower-hyper"] }
uuid = "*"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[build-dependencies]
protoc-grpcio = "1.0"
tower-grpc-build = { version = "*", features = ["tower-hyper"] }

[dev-dependencies]
tempfile = "*"
